# thicket

./: .gitignore  Cargo.toml  README.md  railway.json
src/: cache.rs  contract_processor.rs  main.rs
static/: index.html
