[package]
name = "thicket"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = "1"
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "unbounded_depth",
] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Stacks-core dependencies matching clarinet's revision
clarity = { git = "https://github.com/stacks-network/stacks-core.git", rev = "41bd9d0a15a08d8ab2603edf11774b0d21a616ec", package = "clarity", default-features = false, features = [
    "developer-mode",
    "rusqlite",
] }
stacks_common = { package = "stacks-common", git = "https://github.com/stacks-network/stacks-core.git", rev = "41bd9d0a15a08d8ab2603edf11774b0d21a616ec", default-features = false }
# Clarinet clarity-static-cost
clarity_static_cost = { package = "clarity-static-cost", git = "https://github.com/stx-labs/clarinet", rev = "59653687be1007ca10e079bb5485cec970a5dc59" }
