[package]
name = "thicket"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = "1"
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "unbounded_depth",
] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Stacks-core dependencies matching clarinet's revision
clarity = { git = "https://github.com/stacks-network/stacks-core.git", rev = "cecca4ac19cdc836c8f806dae0c63a90f0087fb9", package = "clarity", default-features = false, features = [
    "developer-mode",
    "rusqlite",
] }
stacks_common = { package = "stacks-common", git = "https://github.com/stacks-network/stacks-core.git", rev = "cecca4ac19cdc836c8f806dae0c63a90f0087fb9", default-features = false }
# Clarinet clarity-static-cost
clarity_static_cost = { package = "clarity-static-cost", git = "https://github.com/brady-stacks/clarinet", rev = "f5e2186665ba221852ea7eff7740230509ae4f82" }
